Closed
Bug 959818
Opened 12 years ago
Closed 11 years ago
Make DumpJSStack dump out all frames
Categories
(Core :: XPConnect, defect)
Core
XPConnect
Tracking
()
RESOLVED
FIXED
mozilla35
People
(Reporter: sfink, Assigned: sfink)
References
Details
Attachments
(1 file, 2 obsolete files)
|
1.78 KB,
patch
|
bholley
:
review+
|
Details | Diff | Splinter Review |
DumpJSStack callers presumably would like to see the whole thing.
| Assignee | ||
Comment 1•12 years ago
|
||
r? bholley because I don't know if this can be called from somewhere that doesn't want the full stack.
Attachment #8360029 -
Flags: review?(bobbyholley+bmo)
Comment 2•12 years ago
|
||
We should make this work even if there is no cx on the stack (e.g. we're spinning the event loop)... Might be a separate bug.
| Assignee | ||
Comment 3•12 years ago
|
||
An even fancier version: this one even compiles!
I tried calling it. Seemed to produce something sensible, though I don't think I had multiple contexts on the stack.
Attachment #8360042 -
Flags: review?(bobbyholley+bmo)
| Assignee | ||
Updated•12 years ago
|
Attachment #8360029 -
Attachment is obsolete: true
Attachment #8360029 -
Flags: review?(bobbyholley+bmo)
Comment 4•12 years ago
|
||
Comment on attachment 8360042 [details] [diff] [review]
Make DumpJSStack dump out all frames
Review of attachment 8360042 [details] [diff] [review]:
-----------------------------------------------------------------
FormatStackDump is only called in one place. Can we just change the iter there, rather than adding a whole new function?
Attachment #8360042 -
Flags: review?(bobbyholley+bmo) → review-
| Assignee | ||
Comment 5•12 years ago
|
||
Sorry, I shouldn't sit on this forever.
Attachment #8460981 -
Flags: review?(bobbyholley)
| Assignee | ||
Updated•12 years ago
|
Attachment #8360042 -
Attachment is obsolete: true
Updated•12 years ago
|
Attachment #8460981 -
Flags: review?(bobbyholley) → review+
Comment 6•12 years ago
|
||
Could this change be backported to Firefox 31 ESR when fixed?
Today I was trying to troubleshoot an issue where a website that I am working on crashes Firefox 31.0. (It runs fine in Firefox 30.0.) Due to this issue, I cannot print the JS stack trace in gdb to know what is causing the crash.
I have tested Firefox 32 builds and the issue is fixed in that branch. Normally I would just wait for FF32 to be released (currently scheduled for September 1), but much to my dismay, I discovered that Firefox 31.0 was the branch point for a new ESR line, and I am experiencing the same crash in Firefox 31.0 ESR.
Comment 7•12 years ago
|
||
(In reply to Daniel Trebbien from comment #6)
> Could this change be backported to Firefox 31 ESR when fixed?
SGTM. Can you do that Steve?
Comment 8•12 years ago
|
||
Oh, I am sorry. I commented on the wrong bug report. My comment actually applies to Bug 1015339.
| Assignee | ||
Comment 9•11 years ago
|
||
Finally landed this.
https://hg.mozilla.org/integration/mozilla-inbound/rev/78268b8c6e83
Note that currently, I often see
Hit MOZ_CRASH(nsXPConnect not thread-safe) at /home/sfink/src/MI-GC/js/xpconnect/src/nsXPConnect.cpp:50
when calling DumpJSStack() (with or without this patch.) I don't see a bug on that; I'll file it.
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
You need to log in
before you can comment on or make changes to this bug.
Description
•