Bug 959818 - Make DumpJSStack dump out all frames, r=bholley

--HG--
extra : rebase_source : 61fe2ae3a0eaee3b7481ce0042f64db8faaeb475